melhora design e corrige fechamento do popup

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Cardapio digital Jetpoa Beach Club">
-  <title>Jetpoa Beach Club | Cardapio</title>
+  <meta name="description" content="Cardápio digital Jetpoa Beach Club">
+  <title>Jetpoa Beach Club | Cardápio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&display=swap" rel="stylesheet">
@@ -13,8 +13,12 @@
 <body>
   <header class="hero">
     <p class="eyebrow">Jetpoa Beach Club</p>
-    <h1>Cardapio Digital</h1>
+    <h1>Cardápio Digital</h1>
     <p class="subtitle">Escolha sua categoria e aproveite.</p>
+    <div class="hero-actions">
+      <a class="hero-cta" href="https://wa.me/5511999999999?text=Quero%20atendimento%20Jetpoa" target="_blank" rel="noreferrer">Chamar atendimento</a>
+      <span class="hero-note">Atualizado em tempo real e pronto para servir.</span>
+    </div>
   </header>
 
   <nav id="category-nav" class="category-nav" aria-label="Categorias do cardapio"></nav>
@@ -23,6 +27,10 @@
   <footer class="footer">
     <p>Precos sujeitos a alteracao sem aviso previo.</p>
   </footer>
+
+  <a class="whatsapp-floating" href="https://wa.me/5511999999999?text=Quero%20um%20cardapio" target="_blank" rel="noreferrer">
+    WhatsApp rápido
+  </a>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="supabase-config.js" defer></script>
